Fix oversized form issue on Firefox

--- a/styles/todos.css
+++ b/styles/todos.css
@@ -4,11 +4,9 @@ main {
     align-items: center;
 }
 
-#new-todo-form {
+#new-todo-form input {
     min-width: 320px;
     max-width: 400px;
-}
-#new-todo-form input {
     font-size: 1.5em;
     width: 100%;
     border-radius: 0;
